# quant-gameth

./: .gitignore  Implementation_Guide_API_Reference.md  LICENSE  Mathematical_Foundations_Appendix.md  Quantum_Game_Framework_Technical_Specification.md  README.md  pyproject.toml
quant_gameth/: __init__.py  _types.py
quant_gameth/backends/: __init__.py  classical.py  gpu.py  hybrid.py  serialization.py
quant_gameth/encoders/: __init__.py  constraints.py  game_bridge.py  qubo.py  strategy_mapper.py
quant_gameth/examples/: __init__.py  demo_games.py  demo_maxcut.py  demo_portfolio.py  demo_quantum.py  demo_sudoku.py  demo_tournament.py  demo_trading.py
quant_gameth/games/: __init__.py  cooperative.py  evolutionary.py  extensive_form.py  mechanism.py  minimax.py  normal_form.py  quantum_games.py  repeated.py
quant_gameth/generators/: __init__.py  games_gen.py  graphs.py  market.py  puzzles.py
quant_gameth/metrics/: __init__.py  benchmark.py  performance.py
quant_gameth/quantum/: __init__.py  annealing.py  ansatz.py  circuit.py  gates.py  grover.py  measurement.py  qaoa.py  state.py  tensor_network.py  utils.py  vqe.py
quant_gameth/solvers/: __init__.py  graph_coloring.py  knapsack.py  maxcut.py  nqueens.py  portfolio.py  sudoku.py  tsp.py
quant_gameth/utils/: __init__.py  decomposition.py  serialization.py
quant_gameth/viz/: game_viz.py  quantum_viz.py  solver_viz.py
