[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quant-gameth"
version = "0.1.0"
description = "A novel Quantum-Game Theory framework for complex problem solving"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Quantum Game Theory Research"},
]
keywords = [
    "quantum-computing", "game-theory", "optimization", "QAOA",
    "nash-equilibrium", "quantum-games", "combinatorial-optimization",
    "QUBO", "quantum-inspired", "solver",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6",
]

[project.optional-dependencies]
gpu = ["cupy>=11.0"]
jit = ["numba>=0.56"]
all = ["cupy>=11.0", "numba>=0.56"]

[project.urls]
Homepage = "https://github.com/Ronit26Mehta/quant-gameth"
Documentation = "https://github.com/Ronit26Mehta/quant-gameth#readme"
Repository = "https://github.com/Ronit26Mehta/quant-gameth"
Issues = "https://github.com/Ronit26Mehta/quant-gameth/issues"

[tool.setuptools.packages.find]
include = ["quant_gameth*"]

[tool.setuptools.package-data]
quant_gameth = ["py.typed"]
